# serializer version: 1
# name: test_main_success
  '''
  some project.wav: https://soundcloud.com/1
  another project.wav: https://soundcloud.com/2
  ⠋ Uploading "some project.wav"    0:00:00                             0/29 bytes
  ⠋ Uploading "another project.wav" 0:00:00                             0/32 bytes
    Transcoding "some project.wav"    0:00:00
    Transcoding "another project.wav" 0:00:00
  '''
# ---
# name: test_main_success.1
  dict({
    'get': _CallList([
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/users/41506/tracks',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
          'params': dict({
            'limit': 999,
          }),
          'timeout': 10,
        }),
      ),
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
        }),
      ),
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
        }),
      ),
    ]),
    'post': _CallList([
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/uploads/track-upload-policy',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
          'json': dict({
            'filename': 'some project.wav',
            'filesize': 29,
          }),
        }),
      ),
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
        }),
      ),
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/uploads/track-upload-policy',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
          'json': dict({
            'filename': 'another project.wav',
            'filesize': 32,
          }),
        }),
      ),
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/uploads/stub-uid/track-transcoding',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
        }),
      ),
    ]),
    'put': _CallList([
      _Call(
        '',
        tuple(
          'https://some-url',
        ),
        dict({
          'data': 'ASYNC_ITERABLE_HERE',
          'headers': dict({
            'some-uploader-id': 'some-uploader-value',
          }),
          'timeout': 600,
        }),
      ),
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/tracks/soundcloud:tracks:1',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
          'json': dict({
            'track': dict({
              'replacing_original_filename': 'some project.wav',
              'replacing_uid': 'stub-uid',
              'title': 'some project',
            }),
          }),
        }),
      ),
      _Call(
        '',
        tuple(
          'https://some-url',
        ),
        dict({
          'data': 'ASYNC_ITERABLE_HERE',
          'headers': dict({
            'some-uploader-id': 'some-uploader-value',
          }),
          'timeout': 600,
        }),
      ),
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/tracks/soundcloud:tracks:2',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
          'json': dict({
            'track': dict({
              'replacing_original_filename': 'another project.wav',
              'replacing_uid': 'stub-uid',
              'title': 'another project',
            }),
          }),
        }),
      ),
    ]),
  })
# ---
# name: test_main_tracks_newer
  '''
  Skipping already uploaded "some project.wav"
  Skipping already uploaded "another project.wav"
  
  '''
# ---
# name: test_main_tracks_newer.1
  dict({
    'get': _CallList([
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/users/41506/tracks',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
          'params': dict({
            'limit': 999,
          }),
          'timeout': 10,
        }),
      ),
    ]),
    'post': _CallList([
    ]),
    'put': _CallList([
    ]),
  })
# ---
# name: test_main_tracks_not_found
  KeyError("Tracks to upload not found in SoundCloud: ['another project', 'some project']")
# ---
# name: test_main_tracks_not_found.1
  dict({
    'get': _CallList([
      _Call(
        '',
        tuple(
          'https://api-v2.soundcloud.com/users/41506/tracks',
        ),
        dict({
          'headers': dict({
            'Accept': 'application/json',
            'Authorization': 'OAuth stub-fake-token',
            'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36',
          }),
          'params': dict({
            'limit': 999,
          }),
          'timeout': 10,
        }),
      ),
    ]),
    'post': _CallList([
    ]),
    'put': _CallList([
    ]),
  })
# ---
